--- a/HTML/style3.css
+++ b/HTML/style3.css
@@ -6,7 +6,7 @@
 body{
 	width: 100%;
 	height: 100%;
-	background-image: url("image/home4.webp");
+	background-image: url("Image/home4.webp");
 	background-size: cover;
 }
 header span{
